corrected navbar alignment; formatted project pictures to make larger and single-frame on iphone

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,4 +1,7 @@
-
+a.nav-link {
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: darkslategray;
+}
 a::hover {
   color: darkslategray;
 }
@@ -16,11 +19,6 @@ a::hover {
   font-family: 'Open Sans Condensed', sans-serif;
   color: darkslategray;
 
-}
-#navbarSupportedContent {
-  flex-grow: 0;
-  align-items: start;
-  float: right;
 }
 
 .navbar-brand {
@@ -41,14 +39,10 @@ a::hover {
 
 #subtitleLinkRow {
   max-height: 50px;
-  margin-right: 0px;
-  margin-left: 0px;
   padding-left: 5px;
   padding-right: 0px;
   padding-top: 0px;
   padding-bottom: 0px;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 #subTitle {
@@ -58,15 +52,6 @@ a::hover {
   padding-bottom: 0px;
   font-family: 'Homemade Apple', cursive;
   color: darkslategray;
-}
-
-.insideStyles {
-  background: "white";
-  padding: 20;
-  position: "absolute";
-  top: "50%";
-  left: "50%";
-  transform: "translate(-50%,-50%)";
 }
 
 #bgImg {
